k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archie-service
  labels:
    app: archie
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: archie
